--- a/public/modules/events/views/list-events.client.view.html
+++ b/public/modules/events/views/list-events.client.view.html
@@ -1,7 +1,8 @@
 <div layout="column" layout-fill flex data-ng-controller="EventsController" data-ng-init="find()">
     <nav class="position:relative">
         <md-button id="btnAddEvent" class="md-fab md-fab-bottom-right md-accent" aria-label="Add Event" ng-click="createEvent()">
-            <ng-md-icon icon="add" size="34" style="margin-bottom: 20px; margin-right: 10px;"></ng-md-icon>
+            <md-icon md-svg-src="lib/font-awesome-svg-png/white/svg/plus.svg"></md-icon>
+            <!--<ng-md-icon icon="add" size="34" style="margin-bottom: 20px; margin-right: 10px;"></ng-md-icon>-->
         </md-button>
     </nav>
 
